--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,9 +2,10 @@
 * Your CSS here
 **/
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Ruda', sans-serif;
     background-color: #D9A33D;
     color: black;
+    background-image: linear-gradient(45deg, #D9A33D, #EBB569, #EB9738)
 }
 
 h1, h2 {
